# pch2csd

./: .gitignore  .travis.yml  AddConverters.c  CMakeLists.txt  CONTRIBUTION.md  CableSort.c  CreatingNewFile.c  GenInstrumentContent.c  GenInstrumentSpace.c  GenInstruments.c  GenZakInit.c  Gleb1.pch2  Gleb3.pch2  Gleb4.pch2  GlobalTest.pch2  GrayCables.pch2  II2IO.c  LICENSE  MANIFEST.in  ModIDNames.xls  ModuleTableCheck.c  ModuleTypeListSort.c  Nord.cbp  Nord.depend  Nord.layout  OWModule.c  OpenPatchFile.c  OpenTable.c  OpenWrite.c  OpenWriteGen.c  README.md  ReadCL.c  ReadML.c  ReadMP.c  SearchK2AModules.c  TablesReader.c  Test.pch2  Welcome.c  clavia_maps.xls  filter.pch2  (+16 more)
.github/: ci.yml
Docs/: clavia_maps.xls  new_param_deshifr.txt
Documentation/: 134.txt
Function_Tables/: Rectifier.txt
Global/: ModID2Name.txt
Heads/: Ending.txt  Header.txt
IO/: 1000.txt  106.txt  108.txt  121.txt  13.txt  131.txt  132.txt  146.txt  171.txt  174.txt  175.txt  181.txt  182.txt  187.txt  193.txt  194.txt  197.txt  198.txt  20.txt  202.txt  205.txt  3.txt  33.txt  36.txt  50.txt  68.txt  72.txt  84.txt  88.txt  9.txt  96.txt  97.txt  999.txt
Maps/: 112.txt  128.txt  174.txt  176.txt  177.txt  182.txt  189.txt  193.txt  194.txt  194_nextstep.txt  28.txt  31.txt  38.txt  4.txt  42.txt  61.txt  64.txt  69.txt  74.txt  81.txt  83.txt  96.txt  STATUS.txt
Modules/: 1.txt  100.txt  105.txt  112.txt  123.txt  130.txt  131.txt  132.txt  139.txt  140.txt  141.txt  148.txt  156.txt  161.txt  17.txt  171.txt  174.txt  176.txt  177.txt  18.txt  181.txt  182.txt  184.txt  186.txt  187.txt  188.txt  19.txt  196.txt  40.txt  43.txt  44.txt  47.txt  5.txt  53.txt  54.txt  59.txt  61.txt  66.txt  68.txt  69.txt  (+6 more)
Patches/: empty_patch.pch2  test3.pch2
RulesK2A/: 87.txt
Sources/: AddConverters.c  CableSort.c  Config.h  CreatingNewFile.c  GenInstrumentContent.c  GenInstrumentSpace.c  GenInstruments.c  GenZakInit.c  II2IO.c  ModuleTableCheck.c  ModuleTypeListSort.c  NextField.c  OWModule.c  OpenPatchFile.c  OpenTable.c  OpenWrite.c  ReadCL.c  ReadML.c  ReadMO.c  ReadMP.c  ReadPD.c  ReadPS.c  SearchK2AModules.c  TablesReader.c  Util.c  Utils.c  Utils.h  Welcome.c  main.cpp  menu.c
Tables/: BUT007.txt  CLAEXP.txt  Color.txt  DLY100.txt  DLY25m.txt  DLY_1s.txt  DLY_2s.txt  DLYsmp.txt  LVLatG.txt  LVLrel.txt  SemiFreqFacPart.txt  frequency.txt
Test/: CtrlRcv.txt  CtrlSend.txt  EnvH.txt  OscA.txt  OscDual.txt  PCSend.txt  ZeroCnt.txt
docs/: PCH2CSD STATUS.doc  PCH2CSD STATUS.docx  PCH2CSD STATUS.pages  module_type_names.ods  transform_data.ipynb  value_maps.csv  value_maps.ods
doxygen/: doxyfile
pch2csd/: __init__.py  app.py  csdgen.py  parse.py  patch.py  udo.py  util.py
seludoM/: 100.txt  116.txt  128.txt  132.txt  157.txt  41.txt  44.txt  5.txt  WHATSNEW.txt
tests/: __init__.py  test_app.py  (+4 more)
(+375 files in other folders)
